Updated with version: 3.50.1 changes

--- a/_locales/de/messages.json
+++ b/_locales/de/messages.json
@@ -60,7 +60,7 @@
     "description": "Title for the Options page for the 'AdBlock on YouTube' extension."
   },
   "chromebutton_how_to_hide2": {
-    "message": "Mit der rechten Maustaste auf die AdBlock-Schaltfläche klicken und „Ins Chrome-Menü verschieben ...“. Zur Anzeige auf das Chrome-Menü klicken, mit der rechten Maustaste auf die AdBlock-Schaltfläche klicken und „In Symbolleiste behalten“ auswählen.",
+    "message": "Mit der rechten Maustaste auf die AdBlock-Schaltfläche klicken und „Ins Chrome-Menü verschieben ...“ wählen. Zur Anzeige auf das Chrome-Menü klicken, mit der rechten Maustaste auf die AdBlock-Schaltfläche klicken und „In Symbolleiste behalten“ auswählen.",
     "description": "Message explaining how to hide the AdBlock toolbar button. 'Hide Button' should match the text that Chrome displays when you right click a toolbar button."
   },
   "operabutton_how_to_hide2": {
@@ -192,7 +192,7 @@
     "description": "Message displayed when the whitelist wizard will whitelist part of an entire website, for example '*.google.com\/reader\/*'.  The URL will appear on the next line."
   },
   "you_can_slide_to_change": {
-    "message": "Mit den unteren Schiebereglern können Sie genau einstellen, auf welchen Seiten AdBlock nicht läuft.",
+    "message": "Unten können Sie genau einstellen, auf welchen Seiten AdBlock nicht läuft.",
     "description": "Whitelist slider usage instructions. Sometimes only one slider will show, and sometimes two will show, and if possible the text should handle both cases."
   },
   "whitelistertitle2": {
@@ -208,7 +208,7 @@
     "description": "Checkbox in the whitelist wizard"
   },
   "wizardcantrunonframesets": {
-    "message": "Diese AdBlock-Funktion funktioniert nicht auf dieser Site, da sie veraltete Technologie nutzt. Sie können Ressourcen im „Anpassen“-Reiter der Optionsseite manuell auf die schwarze oder weiße Liste setzen.",
+    "message": "Diese AdBlock-Funktion funktioniert nicht auf dieser Site, da sie eine veraltete Technologie nutzt. Sie können Ressourcen im „Anpassen“-Reiter der Optionsseite manuell auf die schwarze oder weiße Liste setzen.",
     "description": "Alert shown when the user tries to use a blacklist\/whitelist wizard on an old website"
   },
   "subscribeconfirm": {
@@ -280,7 +280,7 @@
     "description": "Checkbox on the 'General' tab of the Options page"
   },
   "datacollectionoption": {
-    "message": "AdBlock erlauben, anonyme Filterlisten-Nutzerdaten und Informationen über durch Filterlisten blockierte Inhalte zu sammeln",
+    "message": "AdBlock erlauben, anonyme Filterlisten-Nutzerdaten und Informationen über Inhalte zu sammeln, die durch Filterlisten blockiert wurden",
     "description": "Checkbox on the 'General' tab of the Options page"
   },
   "updatedrightnow": {
@@ -388,11 +388,11 @@
     "description": "Title of the Filter lists tab of the Options page"
   },
   "filterlistlink": {
-    "message": "Abonnieren Sie nicht mehr als Sie brauchen – jeder verlangsamt Sie ein wenig! Mitarbeiter und weitere Listen finden Sie [[hier]].",
+    "message": "Abonnieren Sie nicht mehr als Sie brauchen – jede verlangsamt das Surfen ein wenig! Mitarbeiter und weitere Listen finden Sie [[hier]].",
     "description": "Filter lists tab explanation and link to filter list credits."
   },
   "updatenowmessage2": {
-    "message": "Ich werde Updates automatisch abrufen – Sie können auch [[jetzt aktualisieren]]",
+    "message": "Ich werde Updates automatisch abrufen – oder [[jetzt aktualisieren]]",
     "description": "Update filters text and button"
   },
   "orenteraurl": {
@@ -404,7 +404,7 @@
     "description": "Subscribe to a filter list button"
   },
   "showlinkstolists2": {
-    "message": "Links für die Filterlisten anzeigen",
+    "message": "Links zu den Filterlisten anzeigen",
     "description": "Label to display filter list links"
   },
   "filterantisocial": {
@@ -416,7 +416,7 @@
     "description": "A filter list"
   },
   "filterwarning_removal": {
-    "message": "Liste Adblock Warning Removal (entfernt Warnung über die Benutzung von Ad-Blockern)",
+    "message": "Liste „Adblock-Warnung – Entfernen“ (entfernt Warnungen über die Benutzung von Ad-Blockern)",
     "description": "A filter list. \"Adblock\" is written with a lowercase B in this string as it refers to ad blocking extensions in general, not just AdBlock specifically."
   },
   "filteracceptable_ads": {
@@ -552,11 +552,11 @@
     "description": "Subtitle on the 'Customize' tab"
   },
   "filtersavewarning": {
-    "message": "Seien Sie vorsichtig: Wenn Sie hier einen Fehler machen, könnten viele andere Filter, auch die offiziellen Filter, nicht mehr funktionieren!\nLesen Sie das [[Filter-Syntax-Tutorial]], um zu erfahren, wie man erweiterte Blacklist- und Whitelist-Filter hinzufügt.",
+    "message": "Vorsichtig: Wenn Sie hier einen Fehler machen, könnten viele andere Filter, auch die offiziellen Filter, nicht mehr funktionieren!\nLesen Sie das [[Filter-Syntax-Tutorial]], um zu erfahren, wie man erweiterte Blacklist- und Whitelist-Filter hinzufügt.",
     "description": "Warning when manually editing filters."
   },
   "filtersavewarning_ytadblock_1": {
-    "message": "Seien Sie vorsichtig: Wenn Sie hier einen Fehler machen, könnte AdBlock auf YouTube™ nicht mehr ordnungsgemäß funktionieren.",
+    "message": "Vorsichtig: Wenn Sie hier einen Fehler machen, könnte AdBlock auf YouTube™ nicht mehr ordnungsgemäß funktionieren.",
     "description": "First part of the warning when manually editing filters in the 'AdBlock on YouTube' extension."
   },
   "filtersavewarning_ytadblock_2": {
@@ -596,7 +596,7 @@
     "description": "Introduction of the ad reporting page"
   },
   "malwarenotificationcheckboxmessage": {
-    "message": "Möchten Sie von AdBlock benachrichtigt werden, wenn es Malware erkennt?",
+    "message": "Möchten Sie von AdBlock benachrichtigt werden, wenn Malware erkannt wird?",
     "description": "Checkbox displayed when subscribing to the 'Malware protection' filter list on the Filter lists tab of the Options page"
   },
   "malwarenotificationmessage": {
@@ -680,7 +680,7 @@
     "description": "Step 1 for disabling Chrome extensions"
   },
   "clickdisableotherextensions": {
-    "message": "ODER klicken Sie einfach auf diese Schaltfläche, um alles Obere zu erledigen: [[Alle anderen Erweiterungen deaktivieren]]",
+    "message": "ODER klicken Sie einfach auf diese Schaltfläche, um alle Schritte oben zu erledigen: [[Alle anderen Erweiterungen deaktivieren]]",
     "description": "On the ad report page, an alternative way to disable other extensions"
   },
   "disableotherextensionscomplete": {
@@ -696,7 +696,7 @@
     "description": "On the ad report page, alert notifying users that they will need to manually reenable the extensions"
   },
   "tabreloadcomplete": {
-    "message": "Fertig! Wir haben die Seite mit der Werbung neu geladen. Bitte überprüfen Sie die Seite, um nachzusehen, ob die Werbung verschwunden ist. Kommen Sie dann wieder auf diese Seite und beantworten Sie die untere Frage.",
+    "message": "Fertig! Wir haben die Seite mit der Werbung neu geladen. Bitte überprüfen Sie die Seite, on die Werbung jetzt verschwunden ist. Kommen Sie dann wieder auf diese Seite und beantworten Sie die untere Frage.",
     "description": "On the ad report page, alert notifying users that we've disabled all other extensions"
   },
   "disableforchromeandsafaristeptwo": {
@@ -704,7 +704,7 @@
     "description": "Step 2 for disabling Chrome and Safari extensions"
   },
   "disableforsafaristepone": {
-    "message": "Klicken Sie auf das Menü „Safari“ > Präferenzen > Erweiterungen.",
+    "message": "Klicken Sie auf das Menü Safari > Präferenzen > Erweiterungen.",
     "description": "Step 1 for disabling Safari extensions"
   },
   "disableforedgestepone": {
@@ -1038,7 +1038,7 @@
     }
   },
   "checkinfirefoxtitle": {
-    "message": "Prüfen in Firefox",
+    "message": "In Firefox prüfen",
     "description": "Tell a user to see if a reported ad also appears in Firefox"
   },
   "checkinfirefoxorchrometitle": {
@@ -1074,7 +1074,7 @@
     "description": "Instruction for how to check Firefox\/Chrome for a reported ad"
   },
   "ff_checkinchrometitle": {
-    "message": "Überprüfen in Chrome",
+    "message": "In Chrome prüfen",
     "description": "Tell a user to see if a reported ad also appears in Chrome"
   },
   "ff_checkinchrome_1": {
@@ -1284,7 +1284,7 @@
     "description": "Menu entry to pause the extension (stop blocking ads)"
   },
   "safaricontentblockingpausemessage": {
-    "message": "Um AdBlock mit aktiviertem Inhaltsblockieren zu pausieren, wählen Sie bitte Safari (in der Menüleiste) > Präferenzen > Erweiterungen > AdBlock und haken Sie „AdBlock aktivieren“ ab.",
+    "message": "Um AdBlock mit aktiviertem Blockieren von Inhalten zu pausieren, wählen Sie bitte Safari (in der Menüleiste) > Präferenzen > Erweiterungen > AdBlock und haken Sie „AdBlock aktivieren“ ab.",
     "description": "Alert displayed after clicking 'Pause AdBlock' in the AdBlock menu while Safari Content blocking is enabled."
   },
   "safaricontentblockinglimitexceeded": {
@@ -1364,7 +1364,7 @@
     "description": "Entry in the AdBlock button menu"
   },
   "troubleshoot_an_ad": {
-    "message": "Fehlerbehebung bei einer Anzeige",
+    "message": "Fehlerbehebung bei einer Werbung",
     "description": "Entry in the AdBlock button menu"
   },
   "acceptableadsoption": {
@@ -1404,7 +1404,7 @@
     "description": "Message on the 'Customize' tab of the options page, explaining the danger of adding a whitelist filter for all websites with only some exceptions."
   },
   "storage_quota_exceeded": {
-    "message": "Sie haben die Speichermenge überschritte, die AdBlock nutzen kann. Bitte melden Sie sich von einigen Filterlisten ab!",
+    "message": "Sie haben die Speichermenge überschritten, die AdBlock nutzen kann. Bitte melden Sie sich von einigen Filterlisten ab!",
     "description": "Message shown when the user uses more storage than allowed by the browser."
   },
   "safari50_updatenotice": {
@@ -1538,7 +1538,7 @@
     "description": "Alert displayed after the whitelisting of all subscribed YouTube channels has been completed"
   },
   "allow_ads_all_youtube_channels": {
-    "message": "Erlaubt Werbungen auf allen abonnierten YouTube™-Kanälen",
+    "message": "Werbungen auf allen abonnierten YouTube™-Kanälen erlauben",
     "description": "Toolbar button menu entry, displayed only on youtube.com\/feed\/subscriptions and if the YouTube channel whitelisting option is enabled"
   },
   "whitelist_youtube_channel": {
@@ -1682,7 +1682,7 @@
     "description": "A resource type"
   },
   "typesub_frame": {
-    "message": "Rahmen",
+    "message": "Frame",
     "description": "A resource type"
   },
   "typemain_frame": {
@@ -1766,7 +1766,7 @@
     "description": "Warning shown when the Acceptable Ads filter list is enabled while Safari Content Blocking was already enabled."
   },
   "adreport_laststep": {
-    "message": "Letzter Schritt: Berichten Sie uns das Problem.",
+    "message": "Letzter Schritt: Melden Sie uns das Problem.",
     "description": "Subtitle on the ad report page. Shown when the ad needs to be reported to AdBlock, and not filter list maintainers."
   },
   "adreport_name": {
@@ -1854,7 +1854,7 @@
     "description": "Part three of a message shown to users on the Customize tab of the Options page after invalid custom filters have been migrated"
   },
   "show_language_options": {
-    "message": "Lassen Sie mich die Anzeigesprache von AdBlock wählen",
+    "message": "Ich will die Anzeigesprache von AdBlock wählen",
     "description": "Option to let the user choose AdBlock's display language."
   },
   "display_language_selector": {
@@ -1942,15 +1942,15 @@
     "description": "The text telling MyAdBlock active users that there will be more photos for MyAdBlock."
   },
   "myadblock_pic_replacemenet_description": {
-    "message": "Ersetzen Sie Werbung durch Bilder, die Sie mögen",
+    "message": "Ersetzen Sie Werbung durch Bilder, die Ihnen gefallen",
     "description": "The text briefly describing what the feature does in the MyAdBlock tab in the option page."
   },
   "myadblock_payment_not_available_title": {
-    "message": "OJE! Wir waren nicht in der Lage, eine Verbindung zu unseren Servern aufzubauen",
+    "message": "OH NEIN! Es war keine Serververbindung möglich",
     "description": "The title of an error message box in the MyAdBlock tab in option page when we cannot load iframe."
   },
   "myadblock_payment_not_available_text": {
-    "message": "Wir freuen uns, dass Sie sich für MyAdBlock interessieren! Bedauerlicherweise sind wir aktuell nicht in der Lage, Bezahlungen zu verarbeiten. Bitte versuchen Sie es später erneut.",
+    "message": "Wir freuen uns, dass Sie sich für MyAdBlock interessieren! Leider können wir derzeit keine Bezahlungen verarbeiten. Bitte versuchen Sie es später erneut.",
     "description": "The text of an error message box in the MyAdBlock tab in option page when we cannot load iframe."
   },
   "myadblock_options_page_header": {
@@ -1958,15 +1958,15 @@
     "description": "The text of the header the MyAdBlock Options page"
   },
   "myadblock_picreplacement_exlained": {
-    "message": "Treffen Sie Ihre Auswahl aus den unten befindlichen Kategorieren, damit AdBlock gelegentlich Werbung durch qualitativ hochwertige Bilder ersetzt – und so Ihren Tag verschönert.",
+    "message": "Wählen Sie aus den unteren Kategorieren, damit AdBlock gelegentlich Werbung durch qualitativ hochwertige Bilder ersetzt – und so Ihren Tag verschönert.",
     "description": "The label text for the switch on the MyAdBlock Options page"
   },
   "error_msg_header": {
-    "message": "Hoppla! Wir entschuldigen uns, dass das AdBlock-Menü Probleme beim Laden hatte.",
+    "message": "Hoppla! Wir entschuldigen uns für die Ladeprobleme des AdBlock-Menüs.",
     "description": "The text on the popup menu when an error has occurred"
   },
   "error_msg_help_us": {
-    "message": "Helfen Sie uns, dieses Problem zu lösen, indem Sie uns Ihre Debug-Daten zukommen lassen: Klicken Sie auf ",
+    "message": "Helfen Sie uns, dieses Problem zu lösen und schicken Sie uns Ihre Debug-Daten: Klicken Sie auf ",
     "description": "DO NOT TRANSLATE"
   },
   "error_msg_thank_you": {
@@ -1974,11 +1974,11 @@
     "description": "The text on the popup menu when an error has occurred"
   },
   "error_msg_reload": {
-    "message": "Versuchen Sie als Nächstes, die Erweiterung neu zu laden: Klicken Sie auf ",
+    "message": "Versuchen Sie nun, die Erweiterung neu zu laden: Klicken Sie auf ",
     "description": "DO NOT TRANSLATE"
   },
   "error_msg_help": {
-    "message": "Wenn das nicht funktionieren sollte, schauen Sie, ob Ihnen hier geholfen wird: Klicken Sie auf ",
+    "message": "Wenn das nicht funktioniert, finden Sie hier weitere Hilfe: Klicken Sie auf ",
     "description": "DO NOT TRANSLATE"
   },
   "error_msg_here": {
@@ -2038,7 +2038,7 @@
     "description": "Subtitle on the 'Customize' tab"
   },
   "manualfilteredit2": {
-    "message": "Manuelle Bearbeitung Ihrer Filter",
+    "message": "Ihre Filter manuell bearbeiten",
     "description": "Subtitle on the 'Customize' tab"
   },
   "manualexcludefilteredit2": {
@@ -2046,11 +2046,11 @@
     "description": "Subtitle on the 'Customize' tab"
   },
   "filtersavewarning_part1": {
-    "message": "Wichiger Hinweis: Wenn Sie hier einen Fehler machen, können viele andere Filter, einschließlich der offiziellen Filter, ebenfalls negativ beeinträchtigt werden!",
+    "message": "Wichiger Hinweis: Wenn Sie hier einen Fehler machen, können viele andere Filter, einschließlich der offiziellen Filter, ebenfalls nicht mehr funktionieren!",
     "description": "Warning when manually editing filters -- first part not clickable."
   },
   "filtersavewarning_part2": {
-    "message": "Lesen Sie das [[Filter-Syntax-Tutorial]], um zu lernen, wie man fortgeschrittene Blacklist- und Whitelist-Filter hinzufügt.",
+    "message": "Lesen Sie das [[Filter-Syntax-Tutorial]], um zu erfahren, wie man fortgeschrittene Blacklist- und Whitelist-Filter hinzufügt.",
     "description": "Warning when manually editing filters -- second part clickable."
   },
   "pwyw2": {
@@ -2058,7 +2058,7 @@
     "description": "Text of a payment request link"
   },
   "translator_credit2": {
-    "message": "Anerkennung für die Übersetzung geht an...",
+    "message": "Anerkennung für die Übersetzung geht an ...",
     "description": "This message will be followed by a list of names of the translators who contributed to the language AdBlock is currently displayed in. Do not add any names to this string."
   },
   "selectlanguage2": {
@@ -2090,11 +2090,11 @@
     "description": "Section title of the Themes tab of the Options page"
   },
   "more_themes_coming_soon": {
-    "message": "Schauen Sie mal wieder rein, wenn wir weitere Motive für Sie haben!",
+    "message": "Kommen Sie wieder – bald gibt es weitere Motive!",
     "description": "Text in theme box of the Themes tab of the Options page (no more than 60 characters)"
   },
   "more_themes_on_the_way": {
-    "message": "Weitere Motive in Arbeit!",
+    "message": "Bald gibt es weitere Motive!",
     "description": "Text in theme box of the Themes tab of the Options page (no more than 60 characters)"
   },
   "myadblock_themes_description": {
@@ -2130,7 +2130,7 @@
     "description": "Name of a theme in the Themes tab of the Options page"
   },
   "solarized_theme": {
-    "message": "Solarisiert",
+    "message": "Solarized",
     "description": "Name of a theme in the Themes tab of the Options page"
   },
   "ocean_theme": {
@@ -2162,7 +2162,7 @@
     "description": "Text to callout a new feature"
   },
   "myadblock_short_description": {
-    "message": "Erleben Sie – exklusiv für Spender! – ein verbessertes AdBlock mit neuen, spaßigen Features",
+    "message": "Erleben Sie – exklusiv für Spender! – ein verbessertes AdBlock mit neuen, unterhaltsamen Funktionen",
     "description": "Text substitle of myAdBlock page in the options page"
   },
   "image_swap": {
@@ -2186,7 +2186,7 @@
     "description": "The text notifying something is wrong in the payment iframe in the Options page."
   },
   "myadblock_payment_not_available_subtitle": {
-    "message": "Bedauerlicherweise konnten wir keine Verbindung zu unseren Servern herstellen",
+    "message": "Es ist leider keine Serververbindung möglich",
     "description": "The sub-title of an error message box in payment iframe in the Options page."
   }
 }
