--- a/adblock-betafish/CHANGELOG.txt
+++ b/adblock-betafish/CHANGELOG.txt
@@ -2,6 +2,13 @@
 
 UNRELEASED:
 
+Version: 3.50.1, Date: 2019-07-30
+- Improved the 'MyAdBlock' image replacement functionality
+- Refactored the call to the `getSettings` function
+- Added a new option to hide ads on Twitch
+- Improved / refactored the blacklist / hiding wizard to show correctly on all web sites, removed jQuery UI
+- Updated translations
+
 Version: 3.49.1, Date: 2019-07-05
 - Improved / modified the AdBlock options page
 - Added new themes for the AdBlock menu
