--- a/_locales/en_US/messages.json
+++ b/_locales/en_US/messages.json
@@ -2157,6 +2157,10 @@
     "message": "AdBlock Home Page",
     "description":"Title for link to AdBlock's website"
   },
+  "twitch_hiding_option":{
+    "message":"Enable hiding of streaming ads on Twitch™",
+    "description":"Description of option on General tab of the Options page to hide Twitch ads"
+  },
   "callout_new_feature":{
     "message":"NEW!",
     "description":"Text to callout a new feature"
@@ -2188,5 +2192,137 @@
   "myadblock_payment_not_available_subtitle":{
     "message":"We were unable to connect to our servers",
     "description":"The sub-title of an error message box in payment iframe in the Options page."
+  },
+  "sync_tab_item":{
+    "message":"Sync",
+    "description":"Title of the Sync sub-tab of the Options page"
+  },
+  "myadblock_sync_description":{
+    "message":"Sync your preferences across multiple browsers and devices",
+    "description":"Text on the MyAdBlock tab, Sync panel of the Options page"
+  },
+  "sync_check_status_text":{
+    "message":"Sync and personalize AdBlock across your extensions  [[Check status]]",
+    "description":"message and button text on the Sync sub-tab of the Options page"
+  },
+  "sync_turn_on_text":{
+    "message":"Sync and personalize AdBlock across your extensions  [[Turn on sync]]",
+    "description":"message and button text on the Sync sub-tab of the Options page"
+  },
+  "sync_turn_off_btn_text":{
+    "message":"Turn off",
+    "description":"button text on the Sync sub-tab of the Options page"
+  },
+  "sync_turn_on_invalid_name_text":{
+    "message":"Please name this extension to continue",
+    "description":"error message text on the Sync sub-tab of the Options page"
+  },
+  "sync_turn_on_duplicate_name_text":{
+    "message":"This extension name is already in use",
+    "description":"error message text on the Sync sub-tab of the Options page"
+  },
+  "sync_extension_section_title":{
+    "message":"Extensions",
+    "description":"section title text on the Sync sub-tab of the Options page"
+  },
+  "sync_header_message_no_license":{
+    "message":"Please give us a few moments to make sync available.",
+    "description":"message to users on the sync page when the license is unavailable, inactive or a license ID hasn't been returned yet"
+  },
+  "sync_header_message_getting_license":{
+    "message":"checking ...",
+    "description":"message to users on the sync page when the extension is getting the license"
+  },
+  "sync_header_message_in_progress":{
+    "message":"Sync in progress…",
+    "description":"message to users on the options pages when syncing with the server is in progress"
+  },
+  "sync_header_message_sync_complete":{
+    "message":"Sync complete",
+    "description":"message to users on the option pages when syncing with the server server is complete"
+  },
+  "sync_extension_no_extension_msg":{
+    "message":"You have no synced extensions.",
+    "description":"message to users on the sync page when the license is unavailable, inactive or a license ID hasn't been returned yet"
+  },
+  "sync_header_message_setup_fail_prefix":{
+    "message":"Sync error:",
+    "description":"start of error message to users on the sync page when sync fails."
+  },
+  "sync_header_message_setup_fail_part_2":{
+    "message":"Please try turning on sync again in a few minutes.",
+    "description":"message to users on the sync page when initial setup of sync fails for some unknown reason."
+  },
+  "sync_header_message_error_prefix":{
+    "message":"This extension was out of sync.",
+    "description":"Start of an sync error message to users on the Options page or AdBlock popup menu."
+  },
+  "sync_header_message_old_commit_version_part_2":{
+    "message":"We’ve synced this extension and reverted your changes.",
+    "description":"part 2 of a message message to users on the sync page and popup menu when initial setup of sync fails for some unknown reason."
+  },
+  "sync_header_message_old_commit_version_part_3":{
+    "message":"Please make your changes again.",
+    "description":"part 3 of a message message to users on the sync page when initial setup of sync fails for some unknown reason."
+  },
+  "sync_header_message_old_commit_version_customize_tab_part_2":{
+    "message":"We’ve synced this extension and will revert your changes.",
+    "description":"part 2 of a message to users on the sync page when initial setup of sync fails for some unknown reason."
+  },
+  "sync_header_message_old_commit_version_customize_tab_part_3":{
+    "message":"Please copy your custom rules to the clipboard, reload the page, and make your changes again.",
+    "description":"part 3 of a message to users on the sync page when initial setup of sync fails for some unknown reason."
+  },
+  "sync_header_error_message_menu_part_3":{
+    "message":"Please make your changes again.",
+    "description":"part 3 of a message to users on the sync page when initial setup of sync fails for some unknown reason."
+  },
+  "sync_show_name_text":{
+    "message":"[[$name$]] is now synced",
+    "description":"message to users on the sync page when which includes the name of the extension / device",
+    "placeholders":{
+      "name":{
+        "content":"$1",
+        "example":"Device 1"
+      }
+    }
+  },
+  "sync_device_name_list_updated_at_msg":{
+    "message":"last updated on $timestamp$",
+    "description":"message to users on when the sync page was last updated with the name of the extensions / devices (displayed in locale specific format)",
+    "placeholders":{
+      "timestamp":{
+        "content":"$1",
+        "example":"April 30, 2019 6:25 pm for US/English locale"
+      }
+    }
+  },
+  "sync_extension_name_placeholder":{
+    "message":"Name this extension…",
+    "description":"placeholder text in the extension / device name field on the sync page"
+  },
+  "sync_verify_turn_on_text":{
+    "message":"Turning on sync will clear existing settings information for this extension.",
+    "description":"message text in the extension / device name field on the sync page"
+  },
+  "sync_update_now_section_title":{
+    "message":"Manual Sync",
+    "description":"section title for the sync now section on the sync page"
+  },
+  "sync_now_message":{
+    "message":"I will fetch updates automatically; you can also",
+    "description":"message text in the on the sync page "
+  },
+  "sync_now_btn_text":{
+    "message":"Sync now",
+    "description":"button text on the Sync sub-tab of the Options page"
+  },
+  "sync_message_old_version_part_1":{
+    "message":"You’re using an old version of AdBlock.",
+    "description":"button text on the Sync sub-tab of the Options page"
+  },
+  "sync_message_old_version_part_2":{
+    "message":"Please [[update]] AdBlock so we can sync your settings.",
+    "description":"button text on the Sync sub-tab of the Options page"
   }
 }
